# sysinfo-gtk

./: README.md  pyproject.toml  sysinfo-gtk.desktop
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
po/: sv.po  sysinfo-gtk.pot
src/sysinfo_gtk/: main.py
